--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@capacitor/keyboard": "1.1.0",
     "@capacitor/status-bar": "1.0.3",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/screen-orientation": "^5.36.0",
     "@ionic-native/video-player": "^5.36.0",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
@@ -23,10 +24,9 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
+    "ionic": "^5.4.16",
     "ionicons": "^5.4.0",
-    "jetifier": "^2.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -71,7 +71,10 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.2.4"
+    "@capacitor/cli": "3.2.4",
+    "jetifier": "^2.0.0",
+    "react-dom": "^17.0.2",
+    "screenfull": "^5.1.0"
   },
   "description": "An Ionic project"
 }
