--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "adb": "^0.2.0",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "ionic": "^5.4.16",
     "ionicons": "^5.4.0",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "3.2.4",
+    "firebase": "^9.1.3",
     "jetifier": "^2.0.0",
     "react-dom": "^17.0.2",
     "screenfull": "^5.1.0"
