--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@capacitor/android": "^3.2.4",
     "@capacitor/app": "1.0.3",
     "@capacitor/core": "3.2.4",
     "@capacitor/haptics": "1.1.0",
     "@capacitor/keyboard": "1.1.0",
     "@capacitor/status-bar": "1.0.3",
+    "@ionic-native/android-full-screen": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/navigation-bar": "^5.36.0",
     "@ionic-native/screen-orientation": "^5.36.0",
     "@ionic-native/video-player": "^5.36.0",
     "@ionic/react": "^5.5.0",
@@ -24,14 +27,20 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "adb": "^0.2.0",
+    "cordova": "^10.0.0",
+    "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "ionic": "^5.4.16",
     "ionicons": "^5.4.0",
+    "name": "0.0.2",
+    "plugin": "^0.3.3",
     "react": "^17.0.1",
+    "react-native-android-fullscreen-webview-video": "^1.0.4",
     "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "rxjs": "^7.4.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
