--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,4 +22,6 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
- org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_301.jdk/Contents/Home
+
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_301.jdk/Contents/Home
+org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_202
