--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,5 +23,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_301.jdk/Contents/Home
-org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_202
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.8.0_301.jdk/Contents/Home
+#org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_202
