--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/status-bar": "1.0.3",
     "@ionic-native/android-full-screen": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/file": "^5.36.0",
     "@ionic-native/navigation-bar": "^5.36.0",
     "@ionic-native/screen-orientation": "^5.36.0",
     "@ionic-native/video-player": "^5.36.0",
@@ -28,6 +29,7 @@
     "@types/react-router-dom": "^5.1.7",
     "adb": "^0.2.0",
     "cordova": "^10.0.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-fullscreen": "^1.3.0",
     "cordova-plugin-video-player": "git+https://github.com/moust/cordova-plugin-videoplayer.git",
     "ionic": "^5.4.16",
