--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,8 +2,5 @@
 	"appId": "nextv",
 	"appName": "NexTV",
 	"webDir": "build",
-	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://192.168.0.164:8100"
-	}
+	"bundledWebRuntime": false
 }
